--- a/WebServer/files/mypage.html
+++ b/WebServer/files/mypage.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     This is my first homepage.
-    <b>Gao Haoyang is a fucking whore!</b>
+    <b>This text is bold.</b>
   </body>
 </html>
